# Sweet

./: .gitignore  README.md  a.py  assets.json  b.py  images.json  main.py  notes.md  pyproject.toml  requirements.txt
app/: main.py
app/shaders/: def.vsh  def3d.fsh  def3d.vsh  floor.fsh  floor.vsh
app/sweet/: __init__.py  common.py  entity.py  looping.py
app/sweet/graphics/: shaders.py
resources/: Airplane.mtl  floor.blend  player.blend  player.blend1
resources/shader/: game.fsh  game.vsh
src/: a.py  images.json  main.py
src/shaders/: def.vsh  def3d.fsh  def3d.vsh  floor.vsh
src/sweet/: __entity.py  __init__.py  __looping.py  camera.py  common.py  entity.py  inputting.py  looping.py  path_solver.py  vector.py
src/sweet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sweet/graphics/: __init__.py  __shaders.py  __texture.py  model.py  shaders.py  texture.py
src/sweet/linalg/: __collision.py  __init__.py  __pathing.py  collision.py  pathing.py
src/sweet/network/: __init__.py
