[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"sweet.build" = ["*.fsh", "*.vsh"]

[project]
name = "sweet"
version = "0.1.0"
description = "Game Development Module"
authors = [
    { name="Isaque-Ias" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyopengl==3.1.10",
    "trimesh==4.12.2",
    "numpy==2.3.3",
    "pillow==11.3.0",
    "pygame==2.6.1",
    "pyglm==2.8.3",
    "opencv-python==4.13.0.92",
    "imageio==2.37.2",
    "pynput==1.8.1",
    "pyperclip==1.9.0",
]