[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"sweet.build" = ["*"]

[project]
name = "sweet"
version = "0.1.0"
description = "Game Development Module"
authors = [
    { name="Isaque-Ias" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Rendering
    "moderngl>=5.12.0",          
    "moderngl-window>=3.1.1",
    "pyopengl==3.1.10",
    "glfw==2.10.0",
    
    # Data and Calculations
    "numpy>=2.1.0",             
    "pyglm>=2.8.3",             
    "trimesh>=4.4.0",        
    
    # Media Processing
    "pillow>=10.4.0",           
    "opencv-python>=4.10.0.0",
    
    # --- Cleaned Up/Removed ---
    # "pygame==2.6.1"
    # "pynput==1.8.1"
    # "pyperclip==1.9.0"
    # "imageio==2.37.2"
]